--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "author": "Sergey Murzin <atlant-t@bk.ru>",
   "license": "MIT",
   "dependencies": {
-    "@types/bootstrap": "^3.3.36",
     "@types/browser-sync": "^0.0.38",
     "@types/del": "^3.0.0",
     "@types/gulp": "^4.0.5",
@@ -15,7 +14,7 @@
     "@types/gulp-typescript": "^2.13.0",
     "@types/jquery": "^3.2.17",
     "@types/node": "^9.3.0",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "4.0.0-beta.3",
     "browser-sync": "^2.23.5",
     "del": "^3.0.0",
     "gulp": "gulpjs/gulp#4.0",
