--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@types/browser-sync": "^0.0.38",
     "@types/del": "^3.0.0",
     "@types/gulp": "^4.0.5",
+    "@types/gulp-rename": "^0.0.33",
     "@types/gulp-sass": "^0.0.31",
+    "@types/gulp-sourcemaps": "^0.0.32",
     "@types/gulp-typescript": "^2.13.0",
     "@types/jquery": "^3.2.17",
     "@types/node": "^9.3.0",
@@ -18,7 +20,9 @@
     "browser-sync": "^2.23.5",
     "del": "^3.0.0",
     "gulp": "gulpjs/gulp#4.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.6.3",
     "gulp-typescript": "^4.0.0-alpha.1",
     "jquery": "^3.2.1",
     "ts-node": "^4.1.0",
